# rubin_ggsl

./: .gitignore  LICENSE  README.md  RUBINIZATION_GUIDE.md  RUBINIZATION_README.md  USAGE_EXAMPLES.md  agent_sim_batch_mpi.py  agent_sim_mpi_orchestrator.py  mpi_utils.py  pyproject.toml  requirements.txt  setup.py  test_mpi.sh
agent_sim/: __init__.py  meneghetti_configurations.py  run_meneghetti_simulation.py
agent_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_sim/comparison/: __init__.py
agent_sim/core/: __init__.py
agent_sim/pylenslib_imsim_branch/: __init__.py  simulator.py
agent_sim/slsim_branch/: __init__.py  simulator.py
cases/: README.md
cases/case1_pylenslib_only/: config.yaml  run.py
cases/case2_slsim_only/: config.yaml  run.py
cases/case3_pylenslib_imsim/: config.yaml  run.py
outputs/agent_sim_batch_mpi/: batch_summary.json
outputs/meneghetti_mpi/: mpi_results.json
pylenslib_outputs/: catalog_summary.json
pylenslib_outputs_ggsl_galaxy/: catalog_summary.json
pylenslib_outputs_ggsl_ring/: catalog_summary.json
pylenslib_outputs_ggsl_tuned/: catalog_summary.json
pylenslib_outputs_paper_MACSJ1206/: catalog_summary.json
pylenslib_outputs_perturbed_ref/: catalog_summary.json
pylenslib_outputs_rubin_realistic/: catalog_summary.json
pylenslib_outputs_rubin_realistic_noise_zoom/: catalog_summary.json
pylenslib_sim/: README.md  __init__.py  main.py  plot_perturbed_ring.py
pylenslib_sim/config_examples/: MACSJ1206_profile_short.yaml  (+8 more)
tests/: test_analytic_lenses.py  test_rubinization.py  test_structure.py
(+42 files in other folders)
